Enable 'use desktop resolution' option

--- a/WhiteChamber/data/startup.settings
+++ b/WhiteChamber/data/startup.settings
@@ -9,6 +9,7 @@ SETTINGS {
   ALLOW_ADVANCED=FALSE
   ALLOW_ACCESSIBILITY_TAB=TRUE
   ALLOW_ABOUT_TAB=TRUE
+  ALLOW_DESKTOP_RES=TRUE
   REGISTRY_PATH="software\Studio Trophis\the white chamber"
 }
 
